--- a/css/organisation.css
+++ b/css/organisation.css
@@ -5,7 +5,6 @@
 	box-sizing: border-box;
 }
 body {
-	height: 100vh;
 	display: grid;
 	align-items: center;
 	font-family: 'Poppins', sans-serif;
@@ -14,6 +13,7 @@ body {
 	width: 100%;
 	height: auto;
 	text-align: center;
+	margin-top: 5rem;
 }
 .tree ul {
 	padding-top: 20px;
